--- a/src/index.css
+++ b/src/index.css
@@ -54,8 +54,7 @@ label {
 
 @media screen and (max-width: 600px) {
   body {
-    display: grid;
-    place-items: center;
+    display: block;
   }
 
   .header {
@@ -65,10 +64,10 @@ label {
   }
 
   .container {
-    display: grid;
-    place-items: center;
-    width: 400px;
-    padding: 20px auto;
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    margin: 0px auto;
     border-radius: 15px;
   }
 }
